removing gallery placeholder captions; added example thumbnail to gallery; removing percentage margin adjustment

--- a/site/index.html
+++ b/site/index.html
@@ -67,49 +67,41 @@
 							<div class="clearfix"></div>
                             <div class="image-gallery-container">
                                 <div id="photography-tab-action" class="image-gallery">
+																		<!-- set the 'title' attribute to have a caption on the image gallery -->
                                     <a class="fancybox" rel="action"
-                                       href="images/action/anni_dynosaur3.jpg"
-                                       title="test thumb 1">
-                                        <img data-src="images/action/anni_dynosaur3___.jpg" alt="anni_dynosaur3" />
+                                       href="images/action/anni_dynosaur3.jpg">
+                                        <img data-src="images/action/anni_dynosaur3_thumbnail.png" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="images/action/chinaglide2.jpg"
-                                       title="test thumb 1">
+                                       href="images/action/chinaglide2.jpg">
                                         <img data-src="images/action/chinaglide2.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="images/action/courtney_spooks.jpg"
-                                       title="test thumb 1">
+                                       href="images/action/courtney_spooks.jpg">
                                         <img class="wide" data-src="images/action/courtney_spooks.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="images/action/daks_fecalator.jpg"
-                                       title="test thumb 1">
+                                       href="images/action/daks_fecalator.jpg">
                                         <img data-src="images/action/daks_fecalator.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="images/action/deep_water_soloing3.jpg"
-                                       title="test thumb 1">
+                                       href="images/action/deep_water_soloing3.jpg">
                                         <img class="wide" data-src="images/action/deep_water_soloing3.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="images/action/ground_up.jpg"
-                                       title="test thumb 1">
+                                       href="images/action/ground_up.jpg">
                                         <img data-src="images/action/ground_up.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="images/action/high_grade_direct_neil1.jpg"
-                                       title="test thumb 1">
+                                       href="images/action/high_grade_direct_neil1.jpg">
                                         <img data-src="images/action/high_grade_direct_neil1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="images/action/high_grade_matt1.jpg"
-                                       title="test thumb 1">
+                                       href="images/action/high_grade_matt1.jpg">
                                         <img data-src="images/action/high_grade_matt1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
-                                       href="images/action/hot_seat_in_hell1.jpg"
-                                       title="test thumb 1">
+                                       href="images/action/hot_seat_in_hell1.jpg">
                                         <img class="wide" data-src="images/action/hot_seat_in_hell1.jpg" alt="" />
                                     </a>
                                     <a class="fancybox" rel="action"
