--- a/site/index.html
+++ b/site/index.html
@@ -43,18 +43,19 @@
 			<div style="clear: both;"></div>
 		</div>
 		<!-- Slightly inset "main content" -->
-		<div class="center-content-wrapper">
+		<div class="center-content-wrapper" id="inset-content-wrapper">
 			<!-- This is the constantly changing gallery background image -->
-			<img id="content-gallery-image" />
+            <!-- This one is the default, and it is in the dom at startup so it will appear
+                immediately. I edited the image to be much smaller than the others, so it 
+                won't delay loading as much as the others might -->
+			<img id="content-gallery-image" src="images/photo_montage_full_export3.jpg" />
 			<div id="tab-content-wrapper">
 				<div id="tab-gallery" style="height: 0px; width: 0px; padding: 0;">
 					<!-- intentionally blank -->
 				</div>
 				<div id="tab-photography">
-					<!-- <img class="tab-background" src="images/castleton_tower_full_page.jpg" /> -->
+					
 					<div class="tab-content-full">
-						<!-- <h3>Photography</h3>
-						<hr /> -->
 						<div id="photography-tabs" style="position: relative;">
 							<ul id="photography-menu">
 								<li>
@@ -320,7 +321,7 @@
 		</div>
 		<div class="footer">
 			<span id="copyright-notice" style="float:right;">
-				copyright &copy; 2014
+				copyright &copy; 2016
 			</span>
 			<span style="float:left;">
 				Dave Vuono | Golden, CO | 203-536-8529 | <a href="mailto:info@davevuono.com?subject=website inquiry">email</a>
@@ -342,8 +343,8 @@
 	<!-- scripts are here for best practice -->
 	<!--<script type="text/javascript" src="js/prototype.js"></script>-->
 	<!--<script type="text/javascript" src="js/scriptaculous.js?load=effects"></script>-->
-	<script src="//code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
-    <script src="//code.jquery.com/ui/1.11.1/jquery-ui.js" type="text/javascript"></script>
+	<script src="//code.jquery.com/jquery-1.10.2.min.js" type="text/javascript"></script>
+    <script src="//code.jquery.com/ui/1.11.1/jquery-ui.min.js" type="text/javascript"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.0.6/jquery.mousewheel.min.js"></script>
     <script type="text/javascript" src="fancyBox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
 	<script src="js/settings.js" type="text/javascript"></script>
